--- a/examples/src/styles/index.css
+++ b/examples/src/styles/index.css
@@ -1,15 +1,23 @@
 @import 'tailwindcss';
 
-@font-face {
-  font-family: 'Bravura';
-  src: url('/font/bravura-latin-400-normal.woff2') format('woff2');
-  font-weight: normal;
-}
-
 :root {
   font-family: -apple-system, BlinkMacSystemFont, 'PingFang SC',
     'Microsoft YaHei', 'Helvetica Neue', Helvetica, Arial, 'Hiragino Sans GB',
-    'Heiti SC', 'WenQuanYi Micro Hei', sans-serif;
+    'Heiti SC', 'WenQuanYi Micro Hei', 'Bravura', sans-serif;
+}
+
+html {
+  margin: 0;
+  padding: 0;
+  background-color: #f5f5f5;
+  position: relative;
+  overflow: auto;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
 }
 
 [font-family='Bravura'] {
